# draft-server

./: Cargo.toml  README.md
assets/: index.html
client/: .gitignore  constants.ts  draft.json  package-lock.json  package.json  scrape-data.js
client/app/: global.css  layout.module.css  layout.tsx  page.tsx  variables.css
client/app/auction/: page.module.css  page.tsx
client/app/auction/components/: auction-settings.module.css  auction-settings.tsx  auction.module.css  auction.tsx  passes.module.css  passes.tsx  team.module.css  team.tsx
client/app/players/: page.tsx
client/app/teams/: page.module.css  page.tsx
client/app/teams/[team]/: page.tsx
client/data/: hooks.ts  index.ts  store.ts  with-store.tsx
client/data/auction/: actions.ts  listener.ts  slice.ts
client/data/auction-settings/: actions.ts  index.ts  listener.ts
client/data/feed/: actions.ts  client-update.ts  index.ts  listener.ts  server-update.ts
client/data/players/: player.ts  players-loader.ts
client/data/teams/: actions.ts  api.ts  index.ts  listener.ts  slice.ts  team.ts
client/state/auction/: actions.ts  index.ts  listener.ts
client/state/auction-settings/: actions.ts  listener.ts  slice.ts
client/state/data/: game.ts  index.ts  load-data.ts  player-stat.ts  player.ts  pro-team.ts  scoring-period.ts
client/state/feed/: actions.ts  client-update.ts  hooks.ts  index.ts  server-update.ts
client/state/teams/: actions.ts  listener.ts  slice.ts  team.ts
server/: Cargo.toml
server/src/: action.rs  draft_data.rs  main.rs
src/: draft_data.rs  main.rs
