[package]
name = "draft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["ws"] }
env_logger = "0.10.0"
futures = "0.3.28"
tokio = { version = "1.32.0", features = ["macros", "sync", "rt-multi-thread"] }
tower-http = { version = "0.4.4", features = ["fs"] }
